--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.google.code.gson:gson:2.10'
+	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar{
+	manifest {
+		attributes 'Main-class' : 'JBus'
+	}
 }
